<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.usc.cesr.ema_uas.ui.AdminActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible"
        android:weightSum="1"
        tools:context="edu.usc.cesr.ema_uas.ui.AdminActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/admin_instructions"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/admin_rtid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/admin_rtid"
                android:padding="10dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/admin_rtid_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"/>


        </LinearLayout>

        <TextView
            android:id="@+id/admin_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/admin_date"
            android:padding="10dp" />

        <TextView
            android:id="@+id/admin_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/admin_begin"
            android:padding="10dp" />

        <TextView
            android:id="@+id/admin_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/admin_end"
            android:padding="10dp" />

        <Button
            android:id="@+id/admin_show_alarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_show_alarms"/>

        <Button
            android:id="@+id/admin_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"/>

        <Button
            android:id="@+id/admin_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
